src/styles/styles.css
/* ... */
#mobile-nav button:hover, #mobile-nav button:focus { color: var(--clr-very-light-green); }
#mobile-nav button:active { color: var(--clr-purple-tilite); }

@media (max-width: 40rem) {
	#mobile-nav-trigger { display: inline; }
	#desktop-nav { display: none; }
}

/* SECTION: HERO */
.bg--hero-nav, .section--contact { background-color: var(--clr-bg-light); }

@media (max-width: 500px) {
	.section--hero h1 {
		margin-bottom: 1rem;
		margin-top: 0;
		padding-top: 0;
	}

	.p--tagline { font-size: 1.5rem; }
}

.a--cta {
	background-color: var(--clr-purple-tilite);
	border-radius: 24px;
	color: #fefdfd;
	display: block;
	font-size: 2.75em;
	font-weight: 800;
	margin: 2.5rem auto;
	max-width: 35rem;
	padding: 0.75em 1em;
	text-align: center;
	text-decoration: none;

	@media (max-width: 500px) {
		border-radius: 12px;
		display: block;
		font-size: 1.2rem;
		font-weight: 800;
		margin: 1.5rem auto;
		max-width: 15rem;
		padding: 0.75em 1em;
		text-align: center;
		text-decoration: none;
	}
}

/* SECTION: PODCAST */



/* SECTION: POSTS */

.section-podcast,
.section--posts,
.section--our-work,
.section--about,
.section--volunteer,
.section--design-work,
.section--public-speaking,
.section--contact {
	margin: 0.5rem 2rem;
	@media (max-width: 500px) { margin: 0.5rem 1rem; }
}

.posts--grid {
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-flow: row;

   @media (min-width: 900px) { grid-template-columns: 1fr 1fr 1fr; }
}

.card--posts {
	align-content: center;
	/* 3 columns and 6 rows */
	display: grid;
	grid-row: inherit;
	grid-template-columns: 1fr 1fr 1fr;
	justify-content: center;
}

.icon--posts {
	display: block;
	grid-column-end: 4;
	grid-column-start: 1;
	justify-self: center;
}

.heading--post-name {
	grid-column-end: 4;
	grid-column-start: 1;
	grid-row-end: 3;
	grid-row-start: 2;
	justify-self: center;
	margin: 1.5rem 0;
	text-wrap: nowrap;

	@media (max-width: 500px) {
		/* text-wrap: wrap; */
		justify-self: center;
	}
}

.post--content {
	grid-column-end: 4;
	grid-column-start: 1;
	grid-row-end: 4;
	grid-row-start: 3;
}

.list--post { /* list-style-image: url(/assets/icon-checkmark-light-purple.png); */ }

.list--post li {
	color: var(--clr-purple-tilite);
	font-size: 1.25rem;
	padding-left: 1em;
}

.list--post li span {
	position: relative;
	top: -15px;
}

.card--posts {
	border: var(--clr-green) 4px solid;
	margin: 1rem 0.25rem;
	/* border-radius: 24px; */
	padding: 0.75rem 1rem;
}

.icon--posts { max-width: 4rem; }

.a--cta-post {
	border: var(--clr-purple-tilite) 2px solid;
	color: var(--clr-purple-tilite);
	display: inline-block;
	font-family: var(--ff-primary);
	font-size: 1.75rem;
	font-weight: 800;
	grid-column-end: 4;
	grid-column-start: 1;
	grid-row-end: 5;
	grid-row-start: 4;
	margin: 1.5rem auto;
	max-width: 35rem;
	padding: 0.75rem 1.25rem;
	text-decoration: none;
}

/* SECTIONS: PROJECTS AND VOLUNTEER */

.section--volunteer p { padding: 0 30 0 3rem; }

.organizations--grid {
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: auto auto auto;
	@media (min-width: 700px) { grid-template-columns: 1fr 1fr; }
}

.card--organization {
	display: grid;
	grid-template-columns: auto;
	grid-template-rows: repeat(3, auto);
    grid-template-areas:
        'title'
        'subtitle'
        'blurb'
    ;
	padding: 0.75rem 1rem;
	gap: 1rem;

    &:has( img) {
        grid-template-columns: 5rem auto;
        grid-template-rows: repeat(3, auto);
        grid-template-areas:
            'image title'
            'image subtitle'
            'image blurb'
        ;
    }
}

.logo--organization {
	max-width: 7.8rem;
	padding: 1rem 2rem 0 0;
}

.card--organization h3 {
	padding: 0;
    grid-area: title;

	@media (max-width: 600px) {
		justify-self: center;
		padding: 1.25rem 0 0.25rem 0;
	}
}

.card--organization h4 {
	padding: 0;
    grid-area: subtitle;

	@media (max-width: 600px) {
		justify-self: center;
		padding: 1.25rem 0 0.25rem 0;
	}
}

.card--organization > div { grid-area: blurb; }

.card--organization ul {
	list-style-type: square;
	margin-left: none;
}

/* SECTION: ABOUT */

/* .container--about {

} */

.card--about {
	display: grid;
	grid-template-columns: 30% auto;
	grid-template-rows: 30% auto;
	padding: 0.75rem 1rem;

	@media (max-width: 500px) {
		grid-template-columns: 1fr;
		grid-template-rows: 30% auto auto;
	}
}

.photo-about {
	grid-column-end: 2;
	grid-column-start: 1;
	grid-row-end: 3;
	grid-row-start: 1;
	max-width: 19rem;

	@media (max-width: 500px) {
		grid-column-end: 2;
		grid-column-start: 1;
		grid-row-end: 2;
		grid-row-start: 1;
		justify-self: center;
		max-width: 10rem;
	}
}

.card--about h3 {
	grid-column-end: 3;
	grid-column-start: 2;
	grid-row-end: 2;
	grid-row-start: 1;

	@media (max-width: 800px) {
		.span--title {
			/* color: orange; */
			display: block;
			justify-self: center;
			word-wrap: wrap;
		}
	}

	@media (max-width: 500px) {
		grid-column-end: 2;
		grid-column-start: 1;
		grid-row-end: 3;
		grid-row-start: 2;
		justify-self: center;
		/* padding:.5rem 0; */
		/* color: fuchsia; */
	}
}

.p--about {
	grid-column-end: 3;
	grid-column-start: 2;
	grid-row-end: 3;
	grid-row-start: 2;

	@media (max-width: 500px) {
		grid-column-end: 2;
		grid-column-start: 1;
		grid-row-end: 4;
		grid-row-start: 3;
	}
}

/* EVENTS PAGE */

.p--events p, .p--events ul {
	font-size: 1.25rem;
	font-weight: 500;
	margin: 2em auto;
	max-width: 35em;     /* ~40 characters per line for typical fonts */
	text-align: left;    /* Improves readability */
	line-height: 1.6;    /* Comfortable line spacing */
}

.p--events h3 {    /* ~40 characters per line for typical fonts */
	text-align: center; 
}

/* SECTION: CONTACT */

.section--contact {
	display: grid;
	grid-template-columns: 1fr;
	grid-template-rows: auto auto auto auto;
}

.logo--gk-contact {
	grid-column-end: 2;
	grid-column-start: 1;
	grid-row-end: 2;
	grid-row-start: 1;
	justify-self: center;
	max-width: 10rem;
}
/* ... */

